[project]
name = "adk-dev"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Olikh",email = "Igor.Olikh@ibm.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "poetry-core>=2.0.0,<3.0.0",
    "ibm-watsonx-orchestrate (>=1.5.1,<2.0.0)",
    "fastapi (>=0.115.14,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

